--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="GBK">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maxumum-scale=1.0,user-scalable=no">
     <title>travel</title>
   </head>
